--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.PlacesActivity">
+    <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/places_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        tools:context="com.chepizhko.dogandcat.TabsActivity">
+    </android.support.v7.widget.RecyclerView>
 
     <Button
         android:id="@+id/button"
@@ -13,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="clickPlase"
+        android:onClick="clickToMaps"
         android:text="Add place"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="143dp"
