--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="68dp" >
+    android:id="@+id/rel_lay_card"
+    android:layout_height="68dp"
+    android:background="#CFE6FC">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -14,7 +16,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/rl_2">
 
             <ImageView
                 android:id="@+id/iv_image"
